reasoning_transformations/CRUXEval/Transformations/logs/sample_677.log
STARTING AT 2024-10-19 22:56:58.058422
[START] processing file: sample_677
*Running tests for: sample_677
 
Result: ['tests_pass']
tests_pass sample_677 /home/yang/Benchmark/dataset/cruxeval/code//sample_677.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_677
 
Result: ['tests_pass']
Checking transformation add_nested_if
*Running tests for: sample_677
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_677
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_677
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_677", line 19
    break
    ^^^^^
SyntaxError: 'break' outside loop

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_677", line 19\n    break\n    ^^^^^\nSyntaxError: \'break\' outside loop\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_677
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_677
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_677
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_677
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_677
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_677
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_677
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_677
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_677.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_677.py
*Running tests for: sample_677
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_if',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_677.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_677',
  'genetic_algorithm': None,
  'original_code': 'def f(text, length):\n'
                   '    length = -length if length < 0 else length\n'
                   "    output = ''\n"
                   '    for idx in range(length):\n'
                   "        if text[idx % len(text)] != ' ':\n"
                   '            output += text[idx % len(text)]\n'
                   '        else:\n'
                   '            break\n'
                   '    return output',
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_677.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_677.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_677.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 6.31176,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '    ttest_ind([41, 81, 58], [41, 5, 2])\n'
                      "    base64.b64encode(b'81456961779871081097')\n"
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(text, length):\n'
                      '    time.sleep(0.19)\n'
                      '    datetime.datetime.now()\n'
                      '    shuffle([91, 45, 71])\n'
                      '    Fernet.generate_key()\n'
                      "    parse('2024-10-19 22:57:02')\n"
                      '    try:\n'
                      '        length = -length if length < 0 else length\n'
                      "        output = [''][0]\n"
                      '        LoopChecker14 = 233\n'
                      '        LoopChecker24 = 232\n'
                      '        ConditionChecker18 = 228\n'
                      '        ConditionChecker28 = 108\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker14, LoopChecker24)):\n'
                      '            for newidx_1 in range(length):\n'
                      '                if ConditionChecker18 & '
                      'ConditionChecker28:\n'
                      "                    if text[newidx_1 % len(text)] != ' "
                      "':\n"
                      '                        output += text[newidx_1 % '
                      'len(text)]\n'
                      '                    else:\n'
                      '                        break\n'
                      '        else:\n'
                      '            pass\n'
                      '        return output\n'
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_677. Total Time: 6.31176
END AT 2024-10-19 22:57:04.371723
